--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -11,7 +11,6 @@
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
-    "jade": "^1.11.0",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
@@ -19,6 +18,6 @@
   "devDependencies": {
     "@prisma/client": "^5.6.0",
     "nodemon": "^3.0.2",
-    "prisma": "^5.6.0"
+    "prisma": "^5.22.0"
   }
 }
