--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
+    "mysql2": "^3.12.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   },
