--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@videosdk.live/react-sdk": "^0.1.81",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
+    "dotenv": "^16.4.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
